footer and patterns

--- a/src/app/pages/global/sidebar/sidebar.component.scss
+++ b/src/app/pages/global/sidebar/sidebar.component.scss
@@ -3,6 +3,8 @@
   transition: all .4s ease-in-out;
 
   img {
+    position: relative;
+    left: -2.5px;
     transition: all .4s ease-in-out;
   }
 
