--- a/src/app/pages/landingpage/landingpage.component.html
+++ b/src/app/pages/landingpage/landingpage.component.html
@@ -18,6 +18,8 @@
 
 <div class="patterns">
   <div class="patternDot"></div>
+  <div class="patternLine"></div>
+  <div class="patternLine2"></div>
 </div>
 
 <div class="contentTwo">
@@ -94,8 +96,21 @@
   </div>
   <h1>COLABORADORES</h1>
 </div>
-<div class="contentFive">
-  <h1>COLABORADORES</h1>
+<div class="Footer">
+  <div class="footerTop">
+    <div class="footerTop-left"></div>
+    <div class="footerTop-center">
+      <div class="footerTop-centerLeft">
+        <img src="../../../assets/imgs/patrify letter logo.png" alt="Patrify">
+      </div>
+      <div class="footerTop-centerCenter">
+        &copy; 2024 Patrify - Todos os Direitos Reservados.
+      </div>
+      <div class="footerTop-centerRight">
+        <a href="https://github.com/maylon-fernandes/patrify-angular" target="_blank">GitHub</a>
+      </div>
+    </div>
+    <div class="footerTop-right"></div>
+  </div>
 </div>
-<div class="footer"></div>
 </body>              
