--- a/src/app/pages/inventario/filtro/filtro.component.html
+++ b/src/app/pages/inventario/filtro/filtro.component.html
@@ -19,7 +19,7 @@
             <option value="Labotorial">Labotorial</option>
         </select>
 <!-- Botão de adicionar patrimônio -->
-<button id="botao-add" type="button" class="text-white bg-gradient-to-r from-purple-900 via-pink-500 to-orange-500 h-10 rounded-full p-2 whitespace-nowrap transition-all duration-300 hover:from-orange-500 hover:via-pink-500 hover:to-purple-900" (click)="alternarAddPatrimonio()">Adicionar patrimônio</button>
+<button id="botao-add" type="button" class="text-white bg-gradient-to-r from-purple-900 via-pink-500 to-orange-500 h-10 rounded-full p-2 whitespace-nowrap duration-300 hover:from-orange-500 hover:via-pink-500 hover:to-purple-900" (click)="alternarAddPatrimonio()">Adicionar patrimônio</button>
     </div>
     <hr class="h-0.5 w-[100%] my-8 bg-gray-200 border-0 dark:bg-gray-700">
     <div class="flex items-center justify-center space-x-4 gap-8 w-[100%]">
