--- a/src/app/pages/home/chart/chart.component.css
+++ b/src/app/pages/home/chart/chart.component.css
@@ -1,7 +1,7 @@
 .canvas-container {
     position: relative;
-    width: 400px; /* Ajuste a largura conforme necessário */
-    height: 200px; /* Ajuste a altura conforme necessário */
+    width: 400px; 
+    height: 200px; 
   }
   
   canvas {
@@ -9,3 +9,68 @@
     max-height: 100%;
   }
   
+  .canvas-container:last-child{
+    width: 80%;
+  }
+
+.grid{
+  display: grid;
+  grid-template-columns:  300px 1fr 1fr;
+  grid-template-rows:   230px 1fr 1fr;
+  width: 97%;
+  height: 80vh;
+  gap: 20px;
+  margin: 20px;
+}
+
+.graf1{
+  grid-column: 2/3;
+  grid-row: 1/2;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.graf2{
+  grid-column: 3/4;
+  grid-row: 1/2;
+  background-color: white;
+  border-radius: 10px;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.graf3 {
+  grid-area: 2 / 2 / 4 / 4;
+  background-color: white;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info1{
+  grid-column: 1/2;
+  grid-row: 1/2;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.info2{
+  border-radius: 10px;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  background-color: white;
+}
+
+.info3{
+  border-radius: 10px;
+  grid-column: 1/2;
+  grid-row: 3/4;
+  background-color: white;
+}
