--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,7 +3,7 @@ body {
     justify-content: center; /* Centraliza horizontalmente */
     align-items: flex-start; /* Alinha os itens ao início do eixo transversal (vertical) */
     min-height: 100vh; 
-    background-color: #b9b9b9;/* Garante que o corpo da página tenha pelo menos 100% da altura da janela de visualização */
+    background-color: #dad9d9;/* Garante que o corpo da página tenha pelo menos 100% da altura da janela de visualização */
 }
 
 #titulo-header {
