--- a/src/app/pages/home/chart/chart.component.css
+++ b/src/app/pages/home/chart/chart.component.css
@@ -10,7 +10,16 @@
   }
   
   .canvas-container:last-child{
-    width: 80%;
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+    #valuechart{
+    width: 100%;
+    height: 100%;
   }
 
 .grid{
@@ -48,7 +57,6 @@
 .graf3 {
   grid-area: 2 / 2 / 4 / 4;
   background-color: white;
-  
   display: flex;
   flex-direction: column;
   align-items: center;
