--- a/src/app/pages/inventario/filtro/filtro.component.html
+++ b/src/app/pages/inventario/filtro/filtro.component.html
@@ -95,7 +95,7 @@
             <!-- Campos de entrada -->
             <div class="flex-1">
                 <h1>VALOR:</h1>
-                <input type="text" placeholder="Valor" [(ngModel)]="valor"  [ngModelOptions]="{standalone: true}" class="w-full border border-gray-300 rounded-md p-2">
+                <input type="text" placeholder="Valor" [(ngModel)]="valor"  [ngModelOptions]="{standalone: true}" class="w-full border border-gray-300 rounded-md p-2"  currencyMask>
             </div>
             <!-- <div class="flex-1">
                 <h1>FORNECEDOR:</h1>
