--- a/src/app/pages/home/chart/chart.component.html
+++ b/src/app/pages/home/chart/chart.component.html
@@ -25,7 +25,7 @@
         <p>Patrimônio Não Ativo: {{this.patrimoniosnaoativos}}</p>
     </div>
     <div class="info2">
-        <h1>Valor total de patrimônios ativo</h1>
+        <h1>Valor total de patrimônios ativo sem nenhum problema</h1>
         <p>{{this.lastValue}}</p>
     </div>
     <div class="info3">
