--- a/src/app/pages/home/chart/chart.component.html
+++ b/src/app/pages/home/chart/chart.component.html
@@ -25,11 +25,11 @@
         <p>Patrimônio Não Ativo: {{this.patrimoniosnaoativos}}</p>
     </div>
     <div class="info2">
-        <h1>Valor total de patrimônios ativo sem nenhum problema</h1>
+        <h1>Valor total de patrimônial</h1>
         <p>{{this.lastValue}}</p>
     </div>
     <div class="info3">
-        <h1>Valor total de patrimonios não ativos</h1>
+        <h1>Valor total de patrimonios não ativos e descartado</h1> 
         <p>{{this.lastvaluenotactive}}</p>
     </div>
 </div>
