--- a/src/app/pages/home/chart/chart.component.html
+++ b/src/app/pages/home/chart/chart.component.html
@@ -1,18 +1,18 @@
 <div class="grid">
     <div class="graf1">
-        <h2>Gráfico Numero de tipos de patrimonios</h2>
+        <h2>Tipos de Patrimônios:</h2>
         <div class="canvas-container">
             <canvas id="typechart"></canvas>
         </div>
     </div>
     <div class="graf2">
-        <h2>Gráfico numero de Patrimônios ativos e inativos</h2>
+        <h2>Gráfico de Patrimônios:</h2>
         <div class="canvas-container">
             <canvas id="activechart"></canvas>
         </div>
     </div>
     <div class="graf3">
-        <h2>Gráfico do valor ao longo do tempo de patrimonios ativos </h2>
+        <h2>Valor dos Patrimônios ativos ao longo do tempo:</h2>
         <div class="canvas-container">
             <canvas id="valuechart"></canvas>
         </div>
@@ -25,11 +25,11 @@
         <p>Patrimônio Não Ativo: {{this.patrimoniosnaoativos}}</p>
     </div>
     <div class="info2">
-        <h1>Valor total de patrimônial</h1>
-        <p>{{this.lastValue}}</p>
+        <h1>Valor total de patrimônial:</h1>
+        <p>R${{this.lastValue}}</p>
     </div>
     <div class="info3">
-        <h1>Valor total de patrimonios não ativos e descartado</h1> 
-        <p>{{this.lastvaluenotactive}}</p>
+        <h1>Valor total de patrimonios não ativos e descartados:</h1> 
+        <p>R${{this.lastvaluenotactive}}</p>
     </div>
 </div>
