--- a/src/app/pages/home/chart/chart.component.html
+++ b/src/app/pages/home/chart/chart.component.html
@@ -6,7 +6,7 @@
         </div>
     </div>
     <div class="graf2">
-        <h2>Gráfico de Patrimônios:</h2>
+        <h2>Patrimônios ativos e não ativos:</h2>
         <div class="canvas-container">
             <canvas id="activechart"></canvas>
         </div>
@@ -18,11 +18,8 @@
         </div>
     </div>
     <div class="info1">
-        <h1>Número de Patrimônios</h1>
-        <p> patrimonio total: {{this.patrimoniostotal}}</p>
-        <p>Patrimônio Ativo: {{this.patrimoniosativos}}</p>
-        
-        <p>Patrimônio Não Ativo: {{this.patrimoniosnaoativos}}</p>
+        <h1>Número total de Patrimônios:</h1>
+        <p>{{this.patrimoniostotal}}</p>
     </div>
     <div class="info2">
         <h1>Valor total de patrimônial:</h1>
