--- a/src/app/pages/inventario/filtro/filtro.component.html
+++ b/src/app/pages/inventario/filtro/filtro.component.html
@@ -1,14 +1,14 @@
 <div class="bg-white rounded-lg w-[98%] p-6 shadow-md mx-auto overflow-hidden">
-    <div class="flex items-center space-x-4">
+    <div class="flex items-center space-x-4 search">
         <!-- Barra de pesquisa com ícone -->
         <div class="flex items-center bg-gray-200 w-[75%] h-10 rounded-full px-1">
             <svg class="h-4 w-4 ml-4 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.555-4.555M8.486 15.514A6 6 0 1 1 15.514 8.486 6 6 0 0 1 8.486 15.514zM15 15l5 5"/>
             </svg>
-            <input type="search" placeholder="Pesquisar..." class="bg-gray-200 w-full h-full rounded-full px-2 focus:outline-none">
+            <input type="search" placeholder="Pesquisar..." class="bg-gray-200 w-full h-full rounded-full px-2 focus:outline-none search">
         </div>
         <!-- Select com opções -->
-        <select class="bg-gray-200 w-44 h-10 rounded-full p-2 whitespace-nowrap focus:outline-none" [(ngModel)]="tipofilter"  (change)="onFilterChange() ">
+        <select class="type bg-gray-200 w-44 h-10 rounded-full p-2 whitespace-nowrap focus:outline-none" [(ngModel)]="tipofilter" (change)="onFilterChange() ">
             <option value="Todos">Todos</option>
             <option value="Tecnologia">Tecnologia</option>
             <option value="Mobiliário">Mobiliário</option>
@@ -22,7 +22,7 @@
 <button id="botao-add" type="button" class="text-white bg-gradient-to-r from-purple-900 via-pink-500 to-orange-500 h-10 rounded-full p-2 whitespace-nowrap duration-300 hover:from-orange-500 hover:via-pink-500 hover:to-purple-900" (click)="alternarAddPatrimonio()">Adicionar patrimônio</button>
     </div>
     <hr class="h-0.5 w-[100%] my-8 bg-gray-200 border-0 dark:bg-gray-700">
-    <div class="flex items-center justify-center space-x-4 gap-8 w-[100%]">
+    <div class="flex items-center justify-center space-x-4 gap-8 w-[100%] filtros">
         <span class="flex flex-col">
             <span class="font-bold">Ordem</span>
             <select [(ngModel)]="nameFilter" (change)="onFilterChange()" class="bg-transparente text-gray-700 border-2 border-gray-700 font-medium w-44 h-10 rounded-full p-2 focus:outline-none">
