--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -408,6 +408,15 @@ input[type=radio] {
 	font-weight: bolder;
 }
 
+#eyeIcon {
+	width: 25px;
+	color: #fff;
+	fill: white;
+	position: relative;
+	top: -60px;
+	left: 90%;
+	cursor: pointer;
+}
 
 @media print {
 	input[type=radio] {
