total valor patrimonio

--- a/src/app/pages/home/chart/chart.component.html
+++ b/src/app/pages/home/chart/chart.component.html
@@ -23,10 +23,10 @@
     </div>
     <div class="info2">
         <h1>Valor total de patrimônial:</h1>
-        <p>R${{this.lastValue}}</p>
+        <p>{{ this.totalreais }}</p>
     </div>
     <div class="info3">
         <h1>Valor total de patrimonios não ativos e descartados:</h1> 
-        <p>R${{this.lastvaluenotactive}}</p>
+        <p>{{this.totallostreais}}</p>
     </div>
 </div>
