--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -114,22 +114,17 @@
                 <option value="Descartado">Descartado</option>
               </select>
             </td>
-
-            <!-- Campos de edição, exibidos apenas no modo de edição -->
-
-            <!-- Botões de ação, alternando entre Editar e Salvar -->
-            <td>
-              <!-- Botão Editar -->
-              <button *ngIf="!patrimonio.editMode" (click)="toggleEditMode(patrimonio)">Editar</button>
-
-              <!-- Botão Salvar -->
+            <td class="flex justify-center items-center mt-9">
+              <button id="btnActions" class="rounded-full w-8 h-8 bg-transparent border-2 border-gray-400 items-center flex justify-center text-center">
+                <p class="text-gray-400 text-center font-bold text-2xl mb-3">...</p>
+              </button>
+              <div class="flex flex-col bg-gray-200 w-24 h-24 absolute justify-center items-center text-white">
+              <button class="text-blue-800 font-bold" *ngIf="!patrimonio.editMode" (click)="toggleEditMode(patrimonio)">Editar</button>
               <button *ngIf="patrimonio.editMode" (click)="saveChanges(patrimonio)">Salvar</button>
-
-              <!-- Botão Deletar -->
             <td>
-              <button *ngIf="!patrimonio.editMode" (click)="deletarPatrimonio(patrimonio)">Deletar</button>
+              <button class="text-red-600 font-bold" *ngIf="!patrimonio.editMode" (click)="deletarPatrimonio(patrimonio)">Deletar</button>
             </td>
-            <!-- Row 2, 3, ... -->
+          </div>
         </tbody>
       </table>
     </div>
