--- a/src/app/pages/home/chart/chart.component.html
+++ b/src/app/pages/home/chart/chart.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="info1">
         <h1>Número total de Patrimônios:</h1>
-        <p>{{this.total}}</p>
+        <p>{{this.patrimoniostotal}}</p>
     </div>
     <div class="info2">
         <h1>Valor total de patrimônial:</h1>
