--- a/src/app/pages/inventario/filtro/filtro.component.html
+++ b/src/app/pages/inventario/filtro/filtro.component.html
@@ -5,7 +5,7 @@
             <svg class="h-4 w-4 ml-4 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.555-4.555M8.486 15.514A6 6 0 1 1 15.514 8.486 6 6 0 0 1 8.486 15.514zM15 15l5 5"/>
             </svg>
-            <input type="search" placeholder="Pesquisar..." class="bg-gray-200 w-full h-full rounded-full px-2 focus:outline-none search">
+            <input type="search" placeholder="Pesquisar..." class="bg-gray-200 w-full h-full rounded-full px-2 focus:outline-none search" [(ngModel)]="searchText" (ngModelChange)="search()">
         </div>
         <!-- Select com opções -->
         <select class="type bg-gray-200 w-44 h-10 rounded-full p-2 whitespace-nowrap focus:outline-none" [(ngModel)]="tipofilter" (change)="onFilterChange() ">
