--- a/src/app/pages/home/chart/chart.component.html
+++ b/src/app/pages/home/chart/chart.component.html
@@ -29,4 +29,10 @@
         <h1>Valor total de patrimonios não ativos e descartados:</h1> 
         <p>{{this.totallostreais}}</p>
     </div>
+    <div class="info4">
+        <h1>Total de patrimônios ativos:</h1> 
+        <p>{{this.patrimoniosativos}}</p>
+        <h1>Total de patrimônios não ativos:</h1> 
+        <p>{{this.patrimoniosnaoativos}}</p>
+    </div>
 </div>
