--- a/src/app/pages/home/chart/chart.component.scss
+++ b/src/app/pages/home/chart/chart.component.scss
@@ -145,4 +145,32 @@
     }
   }
 
+  .info4{
+    border-radius: 10px;
+    grid-column: 2/3;
+    grid-row: 2/4;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    h1 {
+      font-size: 20px;
+      font-weight: bold;
+    }
+    p {
+      font-size: 50px;
+      color: rgb(20, 240, 0);
+      font-weight: 100;
+    }
+
+    p:last-child {
+      font-size: 50px;
+      color: red;
+      font-weight: 100;
+    }
+  }
+
 }
