--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -120,7 +120,7 @@
               </button>
               <div class="flex flex-col bg-gray-200 w-24 h-24 absolute justify-center items-center text-white">
               <button class="text-blue-800 font-bold" *ngIf="!patrimonio.editMode" (click)="toggleEditMode(patrimonio)">Editar</button>
-              <button *ngIf="patrimonio.editMode" (click)="saveChanges(patrimonio)">Salvar</button>
+              <button class="salvar" *ngIf="patrimonio.editMode" (click)="saveChanges(patrimonio)">Salvar</button>
             <td>
               <button class="text-red-600 font-bold" *ngIf="!patrimonio.editMode" (click)="deletarPatrimonio(patrimonio)">Deletar</button>
             </td>
