--- a/src/app/pages/landingpage/landingpage.component.html
+++ b/src/app/pages/landingpage/landingpage.component.html
@@ -12,7 +12,7 @@
     <h1 class="font-bold" id="contentOne-title">APLICAÇÃO</h1>
   </div>
   <div class="contentOne-right">
-    <p id="contentOne-subtitle">Patrify é um gestor de bens e ativos que facilita a adição e organização de patrimônios em empresas. Com uma interface intuitiva, permite gerar números de série únicos e criar QR codes, oferecendo uma solução prática para o controle eficiente de ativos.</p>
+    <p id="contentOne-subtitle">Patrify é um gestor de bens e ativos que facilita a adição e organização de patrimônios em empresas. Com uma interface intuitiva, permite gerar números de série únicos, oferecendo uma solução prática para o controle eficiente de ativos.</p>
   </div>
 </div>  
 
@@ -55,7 +55,6 @@
       <h1 id="contentThree-title">FUNCIONALIDADES</h1>
       <div class="titleLine"></div>
     </div>
-  
     <div class="contentThree-list">
       <div class = "main">
         <div class = "column expanded"> 
@@ -68,21 +67,21 @@
           <div class = "column"> 
           <div class = "inner-element">
             <h2>PÁGINA DO USUÁRIO</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.       Ut elit tellus, luctus nec ullamcorper mattis, pulvinar           dapibus leo.Lorem ipsum dolor sit amet, consectetur               adipiscing elit. Ut elit tellus, luctus nec ullamcorper           mattis, pulvinar dapibus leo.</p>
+            <p>Mostra as informaçôes básicas referentes ao usuário e a empresa cadastrada.</p>
           </div>
             <div class="icons"><p>2</p></div>
         </div>
           <div class = "column"> 
           <div class = "inner-element">
             <h2>DESCARTE INTELIGENTE</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.       Ut elit tellus, luctus nec ullamcorper mattis, pulvinar           dapibus leo.Lorem ipsum dolor sit amet, consectetur               adipiscing elit. Ut elit tellus, luctus nec ullamcorper           mattis, pulvinar dapibus leo.</p>
+            <p>O recurso de Descarte Inteligente do Patrify exibe as localizações das empresas que estão aptas a realizar o descarte adequado conforme especificado na barra de pesquisa. Isso facilita aos usuários encontrar facilmente pontos de descarte apropriados, promovendo uma gestão responsável de resíduos e materiais.</p>
           </div>
             <div class="icons"><p>3</p></div>
         </div>
           <div class = "column"> 
           <div class = "inner-element">
             <h2>GRÁFICOS</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.       Ut elit tellus, luctus nec ullamcorper mattis, pulvinar           dapibus leo.Lorem ipsum dolor sit amet, consectetur               adipiscing elit. Ut elit tellus, luctus nec ullamcorper           mattis, pulvinar dapibus leo.</p>
+            <p>É uma ferramenta essencial localizada na página principal após o login. Esta ferramenta apresenta gráficos dinâmicos que se atualizam automaticamente conforme o filtro aplicado, proporcionando uma visão clara e atualizada dos dados relevantes.</p>
           </div>
             <div class="icons"><p>4</p></div>
         </div>
