--- a/src/app/pages/landingpage/landingpage.component.scss
+++ b/src/app/pages/landingpage/landingpage.component.scss
@@ -294,7 +294,7 @@ body {
 
         .column:nth-child(4) {
 
-            // background-image: url('http://dmmotionarts.com/wp-content/uploads/2024/01/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg');
+            background-image: url('../../../assets/imgs/grafico.png');
             background-size: cover;
             background-position: center center;
             border-radius: 0px 10px 10px 0px;
