--- a/src/app/pages/inventario/filtro/filtro.component.html
+++ b/src/app/pages/inventario/filtro/filtro.component.html
@@ -16,7 +16,7 @@
             <option value="Transporte">Transporte</option>
             <option value="Logística">Logística</option>
             <option value="Segurança">Segurança</option>
-            <option value="Labotorial">Labotorial</option>
+            <option value="Labotorial">Laboratorial</option>
         </select>
 <!-- Botão de adicionar patrimônio -->
 <button id="botao-add" type="button" class="text-white bg-gradient-to-r from-purple-900 via-pink-500 to-orange-500 h-10 rounded-full p-2 whitespace-nowrap duration-300 hover:from-orange-500 hover:via-pink-500 hover:to-purple-900" (click)="alternarAddPatrimonio()">Adicionar patrimônio</button>
