--- a/src/app/pages/inventario/filtro/filtro.component.html
+++ b/src/app/pages/inventario/filtro/filtro.component.html
@@ -131,7 +131,8 @@
                     <option>Transporte</option>
                     <option>Logística</option>
                     <option>Segurança</option>
-                    <option>Labotorial</option>
+                    <option>Laboratorial</option>
+                    <option>Industrial</option>
                 </select>
             </span>
             <span class="flex flex-col flex-1">
